# swarm_ai

./: .gitignore  .gitmodules  README.md
code/: .gitignore  3d_dubins_test.py  attacker.py  controller.py  cpp_interface.py  datahandler.py  env.py  estimator.py  exp10.py  exp11.py  exp12.py  exp2.py  exp3.py  exp3.yaml  exp4.py  exp5.py  exp6.py  exp7.py  exp8.py  exp9.py  learning_interface.py  mice.py  node.py  param.py  plot_all.sh  plotter.py  run.py  utilities.py
code/attacker/: attacker.py  empty.py
code/benchmark/: README.md  exp3.yaml  panagou.py
code/benchmark/MATLAB/: negative_time.m
code/controller/: controller.py  empty.py  glas.py  joint_mpc.py  mcts.py
code/cpp/: .gitignore  CMakeLists.txt  GLAS.hpp  Game.hpp  GameState.hpp  Policy.hpp  README.md  RobotState.hpp  ValuePredictor.hpp  build.sh  convertNN.py  monte_carlo_tree_search.hpp  python_bindings.cpp  python_bindings_Dubins2D.cpp  python_bindings_dubins2D.cpp  python_bindings_dubins3D.cpp  python_bindings_si.cpp  regression_test.py  swarmgame.cpp  test_glas.cpp  test_python_binding.py  test_python_binding_dubins2D.py  test_python_binding_si.py  test_tictactoe.cpp
code/cpp/MATLAB/: Dubins2D.m
code/cpp/robots/: DoubleIntegrator2D.hpp  Dubins2D.hpp  Dubins3D.hpp  RobotState.hpp  RobotType.hpp  SingleIntegrator2D.hpp
code/dynamics/: double_integrator.py  dynamics.py
code/estimator/: empty.py  estimator.py  exact.py  kalman.py
code/glas/: gparam.py  grun.py  grun2.py  mice.py  param_glas.py  run_glas.py  train_il.py
code/investigations/: dataloader.py  discrete_vae.py  vae.py  vae2d.py  vis_train_policy.py
code/learning/: continuous_emptynet.py  cvae_emptynet.py  deepset.py  discrete_emptynet.py  emptynet.py  feedforward.py  gaussian_emptynet.py  policy_emptynet.py  value_emptynet.py
code/mcts/: exp1.py  exp2.py  mcts.py  mrun.py  run.py
code/mcts/cpp/: .gitignore  CMakeLists.txt  GLAS.hpp  Game.hpp  GameState.hpp  README.md  RobotState.hpp  RobotType.hpp  config.yaml  convertNN.py  eigen_helper.hpp  monte_carlo_tree_search.hpp  plot.py  plot_pdf.py  python_bindings.cpp  regression_test.py  swarmgame.cpp  test_glas.cpp  test_mcts.cpp  test_python_binding.py  test_python_binding_si.py  test_swarmgame.cpp
code/mcts/cpp/robots/: DoubleIntegrator2D.hpp  RobotState.hpp  RobotType.hpp
code/measurements/: global.py  measurements.py  relative_state.py
code/testing/: test_b.pt  test_continuous_glas.py  test_continuous_glas.yaml  test_plotter.sh  test_regression.py
hardware/: README.md  bens_readme.md
hardware/mice-ros-pkg/: CMakeLists.txt  package.xml
hardware/mice-ros-pkg/launch/: allCrazyflies.yaml  crazyflieTypes.yaml  crazyflies.yaml  lab.launch  run.launch  rviz.rviz  sim.launch
hardware/mice-ros-pkg/scrips/: experiments.py
hardware/mice-ros-pkg/scripts/: example_distributed.py  experiments.py  robot.py  sim.py
setup/: install_dependencies.sh  python_requirements.txt
